kubernetes-configs/events-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: events-app
  name: events-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: events-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/jaeger-example: "true"
        io.kompose.service: events-app
    spec:
      containers:
      - args:
        - all
        image: supradeux/events-app:latest
        imagePullPolicy: ""
        name: events-app
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
